# crmeta

./: .gitignore  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  SECURITY.md  runtests.py  setup.cfg  tox.ini
crmeta/: __init__.py  apps.py  fields.py  github.py  google.py  meta.py  models.py  services.py  tests.py  tools.py  urls.py  views.py
crmeta/cxm/: __init__.py
crmeta/features/: contacts.feature  environment.py
crmeta/features/steps/: contacts.py
crmeta/locale/en/LC_MESSAGES/: django.po
crmeta/migrations/: 0001_initial.py
crmeta/templates/: contact_list.html
features/: contacts.feature  crmeta.feature
features/steps/: contacts.py  crmeta.py
tests/: behave_fixtures.py  settings.py
