[metadata]
  name = crmeta
  version = 0.0.1
  url='https://pramari.de/meta',
  author='Andreas.Neumeier',
  author_email='andreas@neumeier.org',
  description='An experiment.',
  classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content


[options]
    packages = crmeta
    python_requires = >=3.8
    install_requires =
      Django >= 4.0
