[metadata]
name = crmeta
version = 0.0.2
url=https://pramari.de/meta,
author=Andreas.Neumeier,
author_email=andreas@neumeier.org,
description='Common Relatable Methods.',
long_description = file: README.md, CHANGELOG.rst, LICENSE
keywords = django, cloud, google, buildbot, automation, secrets,
classifiers =
  Environment :: Web Environment
  Framework :: Django :: 4.0
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3 :: Only
  Topic :: Internet :: WWW/HTTP
  Topic :: Internet :: WWW/HTTP :: Dynamic Content


[options]
packages = crmeta
python_requires = >=3.8
install_requires =
  Django >= 4.0
  djangorestframework
  djangorestframework-guardian
  google-cloud-secret-manager
  PyGithub
